--- a/dashboard/scripts/js-chicken.html
+++ b/dashboard/scripts/js-chicken.html
@@ -4,7 +4,7 @@
     let sensor_select = 0;
 
     const Sensors_realtime = ["Tempurature", "PH", "Ammonia", "Oxygen", "Co2", "Lux"];
-    const Sensors_name_left = ["manual/Auto","SW.FAN", "SW.FOG"];
+    const Sensors_name_left = ["manual/Auto", "SW.FAN", "SW.FOG"];
     const Sensors_name_right = ["SW.CH1", "SW.CH2", "SW.WaaT"];
     const market_name = "chicken";    //name market example => solar, shrimp, indoor, outdoor
     const type = "price";             //multi type example => demand,price
@@ -48,7 +48,7 @@
 
             Create_sensorCard(Sensors_realtime, sensors);
 
-            await loadGraphSensorById(sensors);
+            loadGraphSensorById(sensors);
 
         } catch (err) {
             console.error('❌ loadSensorData error:', err);
@@ -158,7 +158,12 @@
             metricsCards.appendChild(div);
 
             setCardValue(s, value, min, max);
+
+            if (sensor_select == 0 && row.monitor_id) {
+                sensor_select = row.monitor_id;
+            }
         })
+
     }
 
     async function Card1() {
@@ -295,8 +300,8 @@
                 } else {
                     renderSensorChart([], []);
                 }
-                title.textContent = "กราฟแสดงข้อมูลของ " + data?.monitor_name ?? "";
-                Subtitle.textContent = "Historical " + data.monitor_name + " Data";
+                title.textContent = "กราฟแสดงข้อมูลของ" + data?.monitor_name ?? "";
+                Subtitle.textContent = "Historical " + data?.monitor_name + " Data";
                 return;
             }
 
