--- a/dashboard/scripts/js.html
+++ b/dashboard/scripts/js.html
@@ -38,12 +38,12 @@
 
     function setBadge(statusEl, text, type) {
         const map = {
-            success: 'status px-2 py-0.5 rounded-full bg-green-100 text-green-600 text-[9px] font-bold uppercase',
-            warning: 'status px-2 py-0.5 rounded-full bg-yellow-100 text-yellow-700 text-[9px] font-bold uppercase',
-            danger: 'status px-2 py-0.5 rounded-full bg-red-100 text-red-600 text-[9px] font-bold uppercase',
-            info: 'status px-2 py-0.5 rounded-full bg-blue-100 text-blue-700 text-[9px] font-bold uppercase',
-            na: 'status px-2 py-0.5 rounded-full bg-stone-100 text-stone-500 text-[9px] font-bold uppercase',
-            orange: 'status px-2 py-0.5 rounded-full bg-orange-100 text-orange-700 text-[9px] font-bold uppercase',
+            success: 'status px-2 py-0.5 rounded-full bg-green-100 text-green-600 text-[1.5rem] font-bold uppercase',
+            warning: 'status px-2 py-0.5 rounded-full bg-yellow-100 text-yellow-700 text-[1.5rem] font-bold uppercase',
+            danger: 'status px-2 py-0.5 rounded-full bg-red-100 text-red-600 text-[1.5rem] font-bold uppercase',
+            info: 'status px-2 py-0.5 rounded-full bg-blue-100 text-blue-700 text-[1.5rem] font-bold uppercase',
+            na: 'status px-2 py-0.5 rounded-full bg-stone-100 text-stone-500 text-[1.5rem] font-bold uppercase',
+            orange: 'status px-2 py-0.5 rounded-full bg-orange-100 text-orange-700 text-[1.5rem] font-bold uppercase',
         };
 
         statusEl.textContent = text;
